- Drag-and-drop is now supported from the layer bar, spectrum bar and for files from the operating system

Main improvements of TOPP:
- TextExporter can now export peptide/protein information stored in consensusXML
- PeakPicker: reduced the number of parameters, added parallization support
- FeatureFinder: added new MRM algorithm and removed the tool 'FeatureFinderMRM'

Main improvements of OpenMS C++ library:
- removed support for external Memory (use the 64bit builds if you want to process large datasets)
- added suuport for three kinds of parallization architectures
	- OpenMP 
	- Intel Threading Building Blocks
	- Nvidia Cuda

Detailed list of changes to specific OpenMS classes:
- SpectrumSettings: several precursor peaks are now supported
- Precursor: complete rewrite for better support of mzData, mzXML and mzML
- PeakPickerCWT: cleaned up interface, improved meta data handling, improved parameters, added parallization support
- GaussFilter: cleaned up interface, improved meta data handling
- SavitzkyGolayFilter: cleaned up interface, improved meta data handling
- MorphologicalFilter: cleaned up interface
- LinearResampler: cleaned up interface
- LabeledPairFinder: estimated negative sigma values are now treated as positive values
- FeatureFinder: added new algorithm 'MRM' for MRM feature detection; replaces FeatureFinderMRM
- ExperimentalSettings: remove native ID type (for mzML support)
- SourceFile: added native ID type (for mzML support)

Bug fixes:
- [2645436]: TOPPView - Data Filter for "Size" not available
- [2645510]: OpenMS - libOpenMS.so is built but linking fails (TOPP, tests) (on Debian "Lenny")
- [2665055]: FileFilter ignores -sort option for FeatureXML and Consensus
- [2659013]: windows contrib can fail when copying compiled libraries
- [2606068]: TOPP tools with list parameters do not work with INI files

------------------------------------------------------------------------------------------